# vhotplug

./: .pylintrc  API.md  README.md  config.json  device.py  flake.nix  main.py  pyproject.toml  qemulink.py  requirements.txt  setup.py  shell.nix
.github/workflows/: check.yml
nix/: nixos-module.nix  nixos-test.nix  package.nix
testdata/: config.json  usb_hotplug_rules.json
tests/: test_config.py
vhotplug/: __main__.py  apiserver.py  appcontext.py  config.py  crosvmlink.py  device.py  devicestate.py  evdev.py  filewatcher.py  ghaf_dynamic_policy.py  ghaf_policy.py  misc.py  pci.py  qemulink.py  test_config.py  usb.py  usbstate.py  vhotplug.py  vmm.py
vhotplugcli/: __main__.py  apiclient.py  vhotplugcli.py
