[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vhotplug"
version = "1.0"
description = "Hot-plugging USB and PCI devices to virtual machines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "inotify-simple>=1.3.5",
    "psutil>=6.0.0",
    "pyudev>=0.24.3",
    "qemu.qmp>=0.0.3",
]

[project.scripts]
vhotplug = "vhotplug.vhotplug:main"
vhotplugcli = "vhotplugcli.vhotplugcli:main"

[project.urls]
Homepage = "https://github.com/tiiuae/vhotplug"

[tool.setuptools.packages.find]
include = ["vhotplug*", "vhotplugcli*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Only ignore specific modules without type stubs
# This allows mypy to still catch missing imports for other libraries

[[tool.mypy.overrides]]
module = "pyudev.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "inotify_simple.*"
ignore_missing_imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # McCabe complexity
    "C90",
    # Isort
    "I",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-comprehensions
    "C4",
    # flake8-bandit (security)
    "S",
    # flake8-builtins
    "A",
    # flake8-logging-format
    "G",
    # flake8-pie
    "PIE",
    # flake8-pytest-style
    "PT",
    # Ruff-specific rules
    "RUF",
    # Pylint
    "PL",
    # Perflint
    "PERF",
    # tryceratops
    "TRY",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flake8-async
    "ASYNC",
]

ignore = [
    # Ignore complexity
    "C901",
    # Allow boolean positional values in function calls
    "FBT003",
    # Missing docstrings (can be enabled gradually)
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Docstring formatting (less important initially)
    "D203", "D213",
    # Exception messages (TRY003 can be noisy)
    "TRY003",
    # Move statement to else block (TRY300 - can be fixed later)
    "TRY300",
    # Use of assert (S101 - assert is acceptable in Python code)
    "S101",
    # Subprocess call check for untrusted input (S603 - acceptable for trusted paths)
    "S603",
    # Magic value comparison (PLR2004 - can be noisy)
    "PLR2004",
    # Too many arguments/branches/statements/returns (can be enabled gradually)
    "PLR0913", "PLR0912", "PLR0915", "PLR0911",
    # Composite assertions (PT018 - can be fixed later)
    "PT018",
    # Use pathlib instead of os.path (PTH - can be fixed later)
    "PTH",
    # Line too long (E501 - rely on formatter instead)
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = ["S101", "PLR2004", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["vhotplug", "vhotplugcli"]
