[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vhotplug"
version = "1.0"
description = "Hot-plugging USB and PCI devices to virtual machines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "inotify-simple>=1.3.5",
    "psutil>=6.0.0",
    "pyudev>=0.24.3",
    "qemu.qmp>=0.0.3",
]

[project.scripts]
vhotplug = "vhotplug.vhotplug:main"
vhotplugcli = "vhotplugcli.vhotplugcli:main"

[project.urls]
Homepage = "https://github.com/tiiuae/vhotplug"

[tool.setuptools.packages.find]
include = ["vhotplug*", "vhotplugcli*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Only ignore specific modules without type stubs
# This allows mypy to still catch missing imports for other libraries

[[tool.mypy.overrides]]
module = "pyudev.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "inotify_simple.*"
ignore_missing_imports = true
